<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_save"
        android:orderInCategory="100"
        android:title="@string/save"
        android:tooltipText="@string/save_journal"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/abc_ic_menu_share_mtrl_alpha"
        android:orderInCategory="100"
        android:title="Share"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_move"
        android:orderInCategory="100"
        android:title="@string/move_to"
        android:tooltipText="@string/move_tooltip"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_copy"
        android:orderInCategory="100"
        android:title="@string/copy_to"
        android:tooltipText="@string/copy_to_tooltip"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/delete_journal"
        android:tooltipText="@string/delete_journal"
        app:showAsAction="never" />


</menu>